--- a/config/database_default.yml
+++ b/config/database_default.yml
@@ -17,19 +17,9 @@ default: &default
   password:
   socket: /var/lib/mysql/mysql.sock
 
-default_sqlite3: &default_sqlite3
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
-  encoding: utf-8
-
 development:
   <<: *default
   database: SkyHopperDevelopment
-
-# development:
-#   <<: *default_sqlite3
-#   database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -39,8 +29,8 @@ development:
 #   database: SkyHopperTest
 
 test:
-  <<: *default_sqlite3
-  database: db/test.sqlite3
+  <<: *default
+  database: SkyHopperTest
 
 
 # As with config/secrets.yml, you never want to store sensitive information,
