--- a/.travis/database.yml
+++ b/.travis/database.yml
@@ -1,5 +1,6 @@
 test:
-  adapter: sqlite3
-  database: /dev/shm/test.sqlite3
+  adapter: mysql2
+  database: SkyHopperTest
+  encoding: utf8
   pool: 5
   timeout: 5000
