Fix: secretsのdb_crypt_saltがdevelopmentとtestで同じになっていたのを修正

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -20,7 +20,7 @@ development:
 test:
   secret_key_base: <%= random_key.("secret_key_base-test") %>
   db_crypt_key:    <%= random_key.("db_crypt_key-test") %>
-  db_crypt_salt:   <%= random_key.("db_crypt_salt-dev") %>
+  db_crypt_salt:   <%= random_key.("db_crypt_salt-test") %>
   db_crypt_secret: null # This value is dynamically generated
 
 production:
