Update: docker環境のknown_hosts周りを変更

--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ config/database.yml
 
 # Docker
 /docker-compose.override.yml
-/amazonlinux2/known_hosts
+/amazonlinux2/.ssh/
 /mysql/
 /redis/
 /phpmyadmin/
