--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: ./Dockerfile
     volumes:
       - ".:/prj/skyhopper"
-      - "./amazonlinux2/known_hosts:/root/.ssh/known_hosts"
+      - "./amazonlinux2/.ssh:/root/.ssh"
       # exclude
       - /prj/skyhopper/.git
     environment:
