--- a/ansible/roles/zabbix-agent/tasks/main.yml
+++ b/ansible/roles/zabbix-agent/tasks/main.yml
@@ -9,27 +9,29 @@
   register: rhelver
   changed_when: False
 
-- name: zabbix repositories
+- name: Add zabbix repositories
   yum_repository:
     name: zabbix
     description: Zabbix Official Repository
     baseurl: https://repo.zabbix.com/zabbix/{{ agent_version | default(4.4)}}/rhel/{{ rhelver.stdout }}/x86_64/
     enabled: no
 
-- name: add zabbix repository key (1)
+- name: Add zabbix repository key (1)
   rpm_key:
     key: https://repo.zabbix.com/RPM-GPG-KEY-ZABBIX
 
-- name: add zabbix repository key (2)
+- name: Add zabbix repository key (2)
   rpm_key:
     key: https://repo.zabbix.com/RPM-GPG-KEY-ZABBIX-A14FE591
 
-- name: install zabbix-agent
+- name: Install zabbix-agent
   yum:
     name: zabbix-agent
     state: present
     enablerepo: zabbix
 
-- name: configure zabbix-agent
-  script: zabbix-config.sh {{ zabbix_server | default('127.0.0.1')}}
+- name: Configure zabbix-agent
+  script: zabbix-config.sh {{ zabbix_server_address | default('127.0.0.1')}}
 
+- name: Enable zabbix-agent
+  script: zabbix-enable.sh {{ amznver.stdout }}
