Update: meta/main.ymlの修正

--- a/ansible/roles/zabbix-agent/meta/main.yml
+++ b/ansible/roles/zabbix-agent/meta/main.yml
@@ -1,7 +1,6 @@
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  author: hiyuki2578(Shota Tsunehiro)
+  description: zabbix-agent install to amazonlinux
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -14,7 +13,7 @@ galaxy_info:
   # - GPL-3.0-only
   # - Apache-2.0
   # - CC-BY-4.0
-  license: license (GPL-2.0-or-later, MIT, etc)
+  license: MIT
 
   min_ansible_version: 2.4
 
@@ -27,17 +26,13 @@ galaxy_info:
   # To view available platforms and versions (or releases), visit:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
-  # platforms:
-  # - name: Fedora
-  #   versions:
-  #   - all
-  #   - 25
-  # - name: SomePlatform
-  #   versions:
-  #   - all
-  #   - 1.0
-  #   - 7
-  #   - 99.99
+   platforms:
+   - name: Amazon
+     versions:
+     - all
+   - name: Amazon Linux 2
+     versions:
+     - all
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
